@@ -1,5 +1,11 @@
 MeBay NEWS
 
+Changes since 0.2:
+
+* Updated to support recent eBay HTML changes which integrated the
+  bid and watch lists into a single page.  MeBay will still display
+  them as separate tabs.
+
 Changes since 0.1:
 
 * Manage Items tab for keeping track of past auctions.  Several states can be 
